# SentinelDB

./: .dockerignore  .gitignore  Dockerfile  README.md  evaluate.py  evaluate_model.py  gitignore (1).txt  openenv.yaml  pyproject.toml  requirements.txt  run_demo.bat  sentineldb-env.code-workspace  train_trl.py
benchmark-metrics/: metrics.csv  summary.json
docs/: JUDGE_BRIEF.md  PITCH.md  SLIDES.md  WRITEUP.md  blog.md
final-model-before/: model_metrics.csv  model_summary.json
final-oversight-metrics/: metrics.csv  summary.json
notebooks/: SentinelDB_Training.ipynb
rehearsal-model-after/: model_metrics.csv  model_summary.json
rehearsal-train/: rollout_summary.csv
sentineldb_env/: __init__.py  client.py  models.py  policy.py
server/: __init__.py  app.py  models.py  requirements.txt  sentinel_environment.py
server/static/: index.html
smoke-metrics/: metrics.csv  summary.json
smoke-train/: rollout_summary.csv
submission-training/: training_log.csv
tests/: test_environment.py
today-baseline/: metrics.csv  summary.json
tryout-metrics/: metrics.csv  summary.json
tuned-metrics/: metrics.csv  summary.json
tuned-metrics-v2/: metrics.csv  summary.json
